# LetMeHelp

./: README.md
assets/: letmehelp.psd
baserat/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
baserat/baserat/: interpreter.py  llm.py  main.py  screen.py  utils.py
baserat/baserat/prompts/: first_step.jinja  get_coordinates.jinja  next_step.jinja  planning.jinja  self_ask.jinja  self_ask_planning.jinja  system.jinja
grid-test/: grid.py  prompt.txt
notebooks/SeeClick/: README.md  SeeClick.ipynb
notebooks/seeclick/: README.md
runpod-apis/: README.md
runpod-apis/seeclick/: Dockerfile  handler.py
server/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  rebuild.sh  shell.sh  start.sh
server/src/: pyproject.toml
server/src/server/: __main__.py
test-environment/: Dockerfile  README.md  presentation.odp  rebuild.sh  start.sh  startup.desktop  startup.sh  stop.sh
test-environment/libreoffice/4/user/: registrymodifications.xcu
user-client/: Dockerfile  README.md  docker-compose.yaml  main-eel.py  main.py  main.spec  start.sh
user-client/assets/: index.html
user-client/src/letmehelp/: app.go  go.mod  go.sum  main.go  wails.json
user-client/src/letmehelp/frontend/: index.html  package-lock.json  package.json.md5
user-client/src/letmehelp/frontend/src/: App.vue  style.css
user-client/src/letmehelp/frontend/src/components/: Chat.vue  Query.vue
user-client/src/letmehelp/frontend/wailsjs/go/: models.ts
user-client/src/letmehelp/frontend/wailsjs/go/main/: App.d.ts  App.js
