[tool.poetry]
name = "baserat"
version = "0.1.0"
description = "Screen Analysis Engine"
authors = ["Project Stettiner Valley <example@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyautogui = "^0.9.54"
pillow = "^10.4.0"
openai = "^1.47.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
mistralai = "^1.1.0"
pyobjc = "^10.3.1"
pygetwindow = "^0.0.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.3"
ruff = "^0.1.9"
click = "^8.1.7"
ptpython = "^3.0.29"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"